--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
   buildToolsVersion "25.0.2"
   defaultConfig {
     applicationId "com.u1aryz.android.colorpicker.demo"
-    minSdkVersion 9
+    minSdkVersion 14
     targetSdkVersion 25
     versionCode 1
     versionName "1.0"
@@ -25,6 +25,7 @@ dependencies {
     exclude group: 'com.android.support', module: 'support-annotations'
   })
   compile 'com.android.support:appcompat-v7:25.3.1'
+  compile 'com.android.support:preference-v14:25.3.1'
   testCompile 'junit:junit:4.12'
   compile 'com.android.support.constraint:constraint-layout:1.0.2'
 
