--- a/gradle.properties
+++ b/gradle.properties
@@ -11,3 +11,9 @@ org.gradle.jvmargs=-Xmx1536m
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
+USER_ORG=u1aryz
+GROUP_ID=com.u1aryz
+ARTIFACT_ID=colorpicker-preference-compat
+VERSION_NAME=0.1.0
+DESCRIPTION=This is color picker for v7 Preference Support Library
+SITE_URL=https://github.com/u1aryz/ColorPickerPreferenceCompat
